--- a/index.html
+++ b/index.html
@@ -3,10 +3,131 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
-  </head>
+    <meta name="keywords" content="important words">
+    <meta name="description" content="about site">
+    <link rel="stylesheet" href="css/style.css">
+    </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive">Базовый HTML и CSS</a>».</p>
-
+    <header class="main-header">
+    <div class="container">
+        <div class="header-top">
+        <div class="logo">
+        <img src="" width="" height="" alt="">
+        </div>
+    <nav class="main-navigation">
+    <ul>
+        <li><a href="inner.html">Каталог</a></li>
+        <li><a href="#">Доставка и оплата</a></li>
+        <li><a href="#">О компании</a></li>
+    </ul>  
+    </nav>
+    <form action="/echo" method="post">
+        <label for="search"></label> 
+        <input type="search" name="search" id="search">
+        </form>
+        <div class="user-block">
+        <a class="login" href="#">Вход</a>
+        </div>
+        <!--Корзина!-->
+        <div class="contacts"> 
+         C 10 до 20 ежедневно<br>
+         8 812 450-25-25
+    </div>
+    </div>  
+    </div>
+    </header>
+    <main class="container">
+        <div class="promo">
+           <div class="promo-title">
+           <h1>Крембрюле и пломбир <br>с малиновым джемом</h1>
+           </div>
+           <input type="submit" value="Давайте оба" class="btn btn-red">
+        </div>
+        <section class="features">
+        <div class="container">
+          <div class="features-raspberry">
+            <h3>Малинка даром!</h3>
+            <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+             <input type="submit" value="Хочу варенье!" class="btn btn-red btn-features">
+          </div>
+          <div class="features-chocolate">
+            <h3>Шоколадки даром!</h3>
+              <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+              <input type="submit" value="Хочу шоколадки!" class="btn btn-red btn-features">
+          </div>
+          </div>
+          <div class="features-icons">
+              <div class="features-icons features-icons-vanilla">
+                  <a href=#> Ванильный пломбир с апельсиновым джемом</a>
+              </div>
+              <div class="features-icons features-icons-coffee">
+                  <a href=#> Кофейное мороженое с кусочками шоколада</a>
+              </div>
+              <div class="features-icons features-icons-raspberry">
+                  <a href=#> Клубничный пломбир с присыпкой из белого шоколада</a>
+              </div>
+              <div class="features-icons features-icons-сremebrulee">
+                  <a href=#> Крембрюле с карамельной подливкой</a>
+              </div>
+          </div>
+        </section>
+        <section class="advantages">
+            <h3 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного мороженного собственного производства на развес</h3>
+            <div class="advantages-icons">
+            </div>
+            <ul>
+                <li class="">Все изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий</li>
+                <li class="">Для приготовления мороженного используется настояшие сливки и молоко высочайшего качества. Все дополнительные ингридиенты добавки произведены                              из натурального экологически чистого сырья.</li>
+                <li class="">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают долговременное сотрудничество                 </li>
+                <li class="">Доставка нашего мороженного до заказчиков осуществляется в специальной термоупаковке, которая не дает мороженному растаять в пути и позволяет                              ему сохранить свой превосходный вкус.</li>
+            </ul>
+        </section>
+        <div class="news-subscription">
+        <article>
+            Новое в нашем блоге<br>
+                <a href=#> 10 способов сервировки фруктовых щербетов к столу</a>
+        </article>
+        <div class="subscription">
+            Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не слать всякой ненужной ерунды. Честно=)
+            <form action="/echo" method="post">
+            <input type="email" placeholder="Электронная почта">
+            <input type="submit" class="btn btn-red btn-subscription">
+            </form>
+        </div>
+        </div>
+        <div class="address">
+            Адресс нашего офиса и<br>
+            офлайн магазина<br>
+        <strong>ул.Большая Конюшенная<br>
+            19/8, Санкт-Петербург<br>
+        </strong>
+            Для заказов по телефону:<br>
+        <strong>8 812 450-25-25</strong>
+            <br>(c 10 до 20 ежедневно)
+            <input type="submit" value="Форма обратной связи" class="btn btn-red">
+        </div>
+      </main>
+        <footer class="main-footer">
+        <div class="container">
+        <div class="footer-social">
+            <a href="#" class="social-btn social-btn-tw">Твиттер</a>
+            <a href="#" class="social-btn social-btn-in">Инстаграмм</a>
+            <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
+            <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
+        </div>
+        <div class="footer-menu">
+            <a href="#" class=""><b>Для поставщиков</b></a>
+            <a href="#" class=""><b>О производстве</b></a>
+            <a href="#" class=""><b>Наши документы</b></a>
+            <a href="#" class=""><b>Экологические стандарты</b></a>
+        </div>
+        <div class="footer-logo">
+            <img src="" width="" height="">
+        </div>
+        <div class="footer-bottom">
+        <div class="copyright">Сделано в HTML Academy © 2016</div>
+        </div>
+        </div>
+    </footer>
   </body>
 </html>
