--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <div class="user-block">
         <a class="login" href="#">Вход</a>
         </div>
-        <!--Корзина!-->
+        <div class="basketofgoods">
+        <a class="basket" href=#>Корзина</a>
+        </div>
         <div class="contacts"> 
          C 10 до 20 ежедневно<br>
          8 812 450-25-25
