--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <header class="main-header">
-    <div class="container">
+  <div class="container">
+    <header class="main-header">
       <div class="header-top">
         <div class="logo">
           <a href="#" <img src="" width="" height="" alt=""></a>
@@ -34,90 +34,99 @@
           <br> 8 812 450-25-25
         </div>
       </div>
-    </div>
-  </header>
-  <main class="container">
-    <div class="promo">
-      <div class="promo-title">
-        <h3>Крембрюле и пломбир <br>с малиновым джемом</h3>
+    </header>
+    <main>
+      <div class="promo">
+        <div class="promo-title">
+          <h3>Крембрюле и пломбир <br>с малиновым джемом</h3>
+        </div>
+        <a href="#" class="btn btn-red">Давайте оба!</a>
       </div>
-      <a href="#" class="btn btn-red">Давайте оба!</a>
-    </div>
-    <div class="promo-slider">
-      <ul>
-        <li><img src="" width="" height="" alt=""></li>
-        <li><img src="" width="" height="" alt=""></li>
-        <li><img src="" width="" height="" alt=""></li>
-      </ul>
-    </div>
-    <section class="features">
-      <div class="features-raspberry">
-        <h3>Малинка даром!</h3>
-        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-        <a href="#" class="btn btn-red btn-features">Хочу варенье!</a>
+      <div class="promo-slider">
+        <ul>
+          <li><img src="" width="" height="" alt=""></li>
+          <li><img src="" width="" height="" alt=""></li>
+          <li><img src="" width="" height="" alt=""></li>
+        </ul>
       </div>
-      <div class="features-chocolate">
-        <h3>Шоколадки даром!</h3>
-        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <a class="btn btn-red btn-features">Хочу шоколадки!</a>
+      <section class="features">
+        <div class="features-raspberry">
+          <h3>Малинка даром!</h3>
+          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+          <a href="#" class="btn btn-red btn-features">Хочу варенье!</a>
+        </div>
+        <div class="features-chocolate">
+          <h3>Шоколадки даром!</h3>
+          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+          <a href="#" class="btn btn-red btn-features">Хочу шоколадки!</a>
+        </div>
+        <div class="products">
+          <div class="products products-vanilla">
+            <img src="" width="" height="" alt="">
+            <div class="price-vanilla">
+              310 P/кг
+            </div>
+            <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          </div>
+          <div class="products products-coffee">
+            <img src="" width="" height="" alt="">
+            <div class="price-coffee">
+              380 Р/кг
+            </div>
+            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+          </div>
+          <div class="products products-raspberry">
+            <img src="" width="" height="" alt="">
+            <div class="price-raspberry">
+              355 Р/кг
+            </div>
+            <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          </div>
+          <div class="products products-сremebrulee">
+            <img src="" width="" height="" alt="">
+            <div class="price-cremebrelee">
+              415 Р/кг
+            </div>
+            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+          </div>
+      </section>
+      <section class="advantages">
+        <h1 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного мороженного собственного производства на развес</h1>
+        <ul>
+          <li class="">Все изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий</li>
+          <li class="">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают долговременное сотрудничество </li>
+          <li class="">Для приготовления мороженного используется настояшие сливки и молоко высочайшего качества. Все дополнительные ингридиенты добавки произведены из натурального экологически чистого сырья.</li>
+          <li class="">Доставка нашего мороженного до заказчиков осуществляется в специальной термоупаковке, которая не дает мороженному растаять в пути и позволяет ему сохранить свой превосходный вкус.</li>
+        </ul>
+      </section>
+      <div class="news-subscription">
+        <article>
+          Новое в нашем блоге
+          <br>
+          <a href="#"> 10 способов сервировки фруктовых щербетов к столу</a>
+        </article>
+        <div class="subscription">
+          Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не слать всякой ненужной ерунды. Честно=)
+          <form action="/echo" method="post">
+            <input type="email" placeholder="Электронная почта" required>
+            <input type="submit" class="btn btn-red btn-subscription">
+          </form>
+        </div>
       </div>
+      <div class="map">
+        <div class="address">
+          Адресс нашего офиса и
+          <br> офлайн магазина
+          <br>
+          <strong>ул.Большая Конюшенная<br>19/8, Санкт-Петербург<br></strong> Для заказов по телефону:
+          <br>
+          <strong>8 812 450-25-25</strong>
+          <br> (c 10 до 20 ежедневно)
+          <input type="submit" value="Форма обратной связи" class="btn btn-red">
+        </div>
       </div>
-      <div class="products-icons">
-        <div class="products-icons products-icons-vanilla">
-          <img src="" width="" height="" alt="">
-          <a href="#">Ванильный пломбир с апельсиновым джемом</a>
-        </div> s-icons products-icons-coffee">
-        <img src="" width="" height="" alt="">
-        <a href="#">Кофейное мороженое с кусочками шоколада</a>
-      </div>
-      <div class="products-icons products-icons-raspberry">
-        <img src="" width="" height="" alt="">
-        <a href="#">Клубничный пломбир с присыпкой из белого шоколада</a>
-      </div>
-      <div class="products-icons products-icons-сremebrulee">
-        <img src="" width="" height="" alt="">
-        <a href="#">Крембрюле с карамельной подливкой</a>
-      </div>
-      </div>
-    </section>
-    <section class="advantages">
-      <h1 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного мороженного собственного производства на развес</h1>
-      <ul>
-        <li class="">Все изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий</li>
-        <li class="">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают долговременное сотрудничество </li>
-        <li class="">Для приготовления мороженного используется настояшие сливки и молоко высочайшего качества. Все дополнительные ингридиенты добавки произведены из натурального экологически чистого сырья.</li>
-        <li class="">Доставка нашего мороженного до заказчиков осуществляется в специальной термоупаковке, которая не дает мороженному растаять в пути и позволяет ему сохранить свой превосходный вкус.</li>
-      </ul>
-    </section>
-    <div class="news-subscription">
-      <article>
-        Новое в нашем блоге
-        <br>
-        <a href="#"> 10 способов сервировки фруктовых щербетов к столу</a>
-      </article>
-      <div class="subscription">
-        Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не слать всякой ненужной ерунды. Честно=)
-        <form action="/echo" method="post">
-          <input type="email" placeholder="Электронная почта" required>
-          <input type="submit" class="btn btn-red btn-subscription">
-        </form>
-      </div>
-    </div>
-    <div class="map">
-      <div class="address">
-        Адресс нашего офиса и
-        <br> офлайн магазина
-        <br>
-        <strong>ул.Большая Конюшенная<br>19/8, Санкт-Петербург<br></strong> Для заказов по телефону:
-        <br>
-        <strong>8 812 450-25-25</strong>
-        <br> (c 10 до 20 ежедневно)
-        <input type="submit" value="Форма обратной связи" class="btn btn-red">
-      </div>
-    </div>
-  </main>
-  <footer class="main-footer">
-    <div class="container">
+    </main>
+    <footer class="main-footer">
       <div class="footer-social">
         <a href="#" class="social-btn social-btn-tw">Твиттер</a>
         <a href="#" class="social-btn social-btn-in">Инстаграмм</a>
@@ -131,13 +140,13 @@
         <a href="#" class="">Экологические стандарты</a>
       </div>
       <div class="footer-logo">
-        <a href="#" <img src="" width="" height="" alt=""> </a>
+        <a href="#" <img src="#" width="100px" height="100px" alt=""> </a>
       </div>
       <div class="footer-copyright">
         Сделано в HTML Academy © 2016
       </div>
-    </div>
-  </footer>
+      </div>
+    </footer>
 </body>
 
 </html>
