Вторая страница сверстана
Добавлены цены и продукты

--- a/catalog.html
+++ b/catalog.html
@@ -92,30 +92,90 @@
         </div>
       </form>
       <div class="products-catalog">
-        <img src="" width="" height="" alt="">
-        <a href="#"> Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-        <img src="" width="" height="" alt="">
-         <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-        <img src="" width="" height="" alt="">
-        <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-        <img src="" width="" height="" alt="">
-         <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-        <img src="" width="" height="" alt="">
-         <a href="#">Сливочное с брусничным джемом</a>
-        <img src="" width="" height="" alt="">
-         <a href="#">Сливочно-черничное с цельными ягодами черники</a>
-        <img src="" width="" height="" alt="">
-         <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
-        <img src="" width="" height="" alt="">
-         <a href="#">Сливочное с шоколадной стружкой </a>
-        <img src="" width="" height="" alt="">
-         <a href="#">Сливочно-ванильное с кусочками шоколада</a>
-         <img src="" width="" height="" alt="">
-         <a href="#">Сливочное с ментоловым сиропом</a>
-         <img src="" width="" height="" alt="">
-         <a href="#">Сливочное с кусочками черного шоколада</a>
-         <img src="" width="" height="" alt="">
-         <a href="#">Сливочное с мятными сиропом</a>
+        <div class="prducts-catalog-orange">
+          <img src="" width="" height="" alt="">
+          <div class="price-catalog-orange">
+            310 Р/кг
+          </div>
+          <a href="#"> Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+        </div>
+        <div class="products-catalog-coffee">
+          <img src="" width="" height="" alt="">
+          <div class="price-catalog-coffee">
+            380 Р/кг
+          </div>
+          <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+        </div>
+        <div class="products-catalog-strawberry">
+          <img src="" width="" height="" alt="">
+          <div class="price-catalog-strawberry">
+            355 Р/кг
+          </div>
+          <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+        </div>
+        <div clas="products-catalog-Cremebrulee">
+          <img src="" width="" height="" alt="">
+          <div class="price-catalog-cremebrulee">
+            415 Р/кг
+          </div>
+          <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+        </div>
+        <div clas="products-catalog-lingonberry">
+          <img src="" width="" height="" alt="">
+          <div clas="price-catalog-lingonberry">
+            325 Р/кг
+          </div>
+          <a href="#">Сливочное с брусничным джемом</a>
+        </div>
+        <div clas="products-catalog-blueberry">
+          <img src="" width="" height="" alt="">
+          <div clas="price-catalog-blueberry">
+            410 Р/кг
+          </div>
+          <a href="#">Сливочно-черничное с цельными ягодами черники</a>
+        </div>
+        <div clas="products-catalog-lemon">
+          <img src="" width="" height="" alt="">
+          <div clas="price-catalog-lemon">
+            375 Р/кг
+          </div>
+          <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
+        </div>
+        <div clas="products-catalog-chocolate">
+          <img src="" width="" height="" alt="">
+          <div clas="price-catalog-chocolate">
+            320 Р/кг
+          </div>
+          <a href="#">Сливочное с шоколадной стружкой </a>
+        </div>
+        <div clas="products-catalog-vanilla">
+          <img src="" width="" height="" alt="">
+          <div clas="price-catalog-vanilla">
+            440 Р/кг
+          </div>
+          <a href="#">Сливочно-ванильное с кусочками шоколада</a>
+        </div>
+        <div clas="products-catalog-menthol">
+          <img src="" width="" height="" alt="">
+          <div clas="price-catalog-menthol">
+            435 Р/кг
+          </div>
+          <a href="#">Сливочное с ментоловым сиропом</a>
+        </div>
+        <div clas="products-catalog-chocoshavings">
+          <img src="" width="" height="" alt="">
+          <div clas="price-catalog-chocoshavings">
+            355 Р/кг
+          </div>
+          <a href="#">Сливочное с кусочками черного шоколада</a>
+        </div>
+        <div clas="products-catalog-mint">
+          <img src="" width="" height="" alt="">
+          <div clas="price-catalog-mint">
+            420 Р/кг
+          </div>
+          <a href="#">Сливочное с мятными сиропом</a>
+        </div>
       </div>
       <div class="paginator">
         <a class="prev" href="#prev">Назад</a>
