--- a/catalog.html
+++ b/catalog.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <div class="container">
     <header class="main-header main-header-catalog">
+      <div class="container">
       <div class="header-top">
         <div class="logo">
           <a href="#" <img src="" width="" height="" alt=""></a>
@@ -184,8 +184,10 @@
         <a href="#5">5</a>
         <a class="next" href="#next">Вперёд</a>
       </div>
+      </div>
     </main>
     <footer class="main-footer">
+     <div class="container">
       <div class="footer-social">
         <a href="#" class="social-btn social-btn-tw">Твиттер</a>
         <a href="#" class="social-btn social-btn-in">Инстаграмм</a>
@@ -203,6 +205,7 @@
       </div>
       <div class="footer-copyright">
         Сделано в HTML Academy © 2016
+      </div>
       </div>
     </footer>
   </div>
