Исправлена вложенность тегов
Исправил вложенность тегов. На двух страницах

--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
       <div class="container">
       <div class="header-top">
         <div class="logo">
-          <a href="#" <img src="" width="" height="" alt=""></a>
+          <a href="#"> <img src="" width="" height="" alt=""></a>
         </div>
         <nav class="main-navigation main-navigation-catalog">
           <ul>
@@ -39,8 +39,9 @@
           <li><a href="#">Сливочное</a></li>
         </ul>
       </div>
+      </div>
     </header>
-    <main>
+    <main class="container">
       <h1 class="page-title">Сливочное мороженое</h1>
       <form action="echo" method="post">
         <p>Сортировка:</p>
@@ -184,7 +185,6 @@
         <a href="#5">5</a>
         <a class="next" href="#next">Вперёд</a>
       </div>
-      </div>
     </main>
     <footer class="main-footer">
      <div class="container">
@@ -201,14 +201,13 @@
         <a href="#" class="">Экологические стандарты</a>
       </div>
       <div class="footer-logo">
-        <a href="#" <img src="" width="" height="" alt=""> </a>
+        <a href="#"> <img src="" width="" height="" alt=""> </a>
       </div>
       <div class="footer-copyright">
         Сделано в HTML Academy © 2016
       </div>
       </div>
     </footer>
-  </div>
 </body>
 
 </html>
