--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           </div>
           <div class="products">
             <div class="products products-vanilla">
+             <img src="" width="" height="" alt="">
               <img src="" width="" height="" alt="">
               <div class="price-vanilla">
                 310 P/кг
@@ -70,6 +71,7 @@
               <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
             </div>
             <div class="products products-coffee">
+             <img src="" width="" height="" alt="">
               <img src="" width="" height="" alt="">
               <div class="price-coffee">
                 380 Р/кг
@@ -77,6 +79,7 @@
               <a href="#">Сливочно-кофейное с кусочками шоколада</a>
             </div>
             <div class="products products-raspberry">
+             <img src="" width="" height="" alt="">
               <img src="" width="" height="" alt="">
               <div class="price-raspberry">
                 355 Р/кг
@@ -84,6 +87,7 @@
               <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
             </div>
             <div class="products products-сremebrulee">
+             <img src="" width="" height="" alt="">
               <img src="" width="" height="" alt="">
               <div class="price-cremebrelee">
                 415 Р/кг
@@ -102,8 +106,8 @@
           </ul>
         </section>
         <div class="news-subscription">
+          <p>Новое в нашем блоге</p>
           <article>
-            Новое в нашем блоге
             <br>
             <a href="#"> 10 способов сервировки фруктовых щербетов к столу</a>
           </article>
@@ -146,7 +150,7 @@
         <a href="#"> <img src="#" width="100px" height="100px" alt=""> </a>
       </div>
       <div class="footer-copyright">
-        Сделано в HTML Academy © 2016
+        Сделано в <a href="#"> HTML Academy</a> © 2016
       </div>
     </div>
   </footer>
