--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <a href="#" class="">Экологические стандарты</a>
       </div>
       <div class="footer-logo">
-        <a href="#"> <img src="#" width="100px" height="100px" alt=""> </a>
+        <a href="#"> <img src="#" width="100" height="100" alt=""> </a>
       </div>
       <div class="footer-copyright">
         Сделано в <a href="#"> HTML Academy</a> © 2016
